--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-push:
+  build-push-upload-start:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
